avoid content jumping , improve mobile ux

--- a/assets/style.less
+++ b/assets/style.less
@@ -30,6 +30,10 @@ li {
   justify-content: center;
 }
 
+#calh {
+  height: 292px;
+}
+
 .container {
   max-width: 1400px;
 }
